2009-01-29 Document 'resolution' kwarg for polar plots.  Support it
           when using pyplot.polar, not just Figure.add_axes. - MGD

2009-01-29 Rework the nan-handling/clipping/quantizing/simplification
           framework so each is an independent part of a pipeline.
           Expose the C++-implementation of all of this so it can be
           used from all Python backends.  Add rcParam
           "path.simplify_threshold" to control the threshold of
           similarity below which vertices will be removed.

2009-01-26 Improved tight bbox option of the savefig. - JJL

2009-01-26 Make curves and NaNs play nice together - MGD

2009-01-21 Changed the defaults of acorr and xcorr to use
           usevlines=True, maxlags=10 and normed=True since these are
           the best defaults

2009-01-19 Fix bug in quiver argument handling. - EF

2009-01-19 Fix bug in backend_gtk: don't delete nonexistent toolbar. - EF

2009-01-16 Implement bbox_inches option for savefig. If bbox_inches is
           "tight", try to determine the tight bounding box. - JJL

2009-01-16 Fix bug in is_string_like so it doesn't raise an
           unnecessary exception. - EF

2009-01-16 Fix an infinite recursion in the unit registry when searching
           for a converter for a sequence of strings. Add a corresponding
           test. - RM

2009-01-16 Bugfix of C typedef of MPL_Int64 that was failing on
           Windows XP 64 bit, as reported by George Goussard on numpy
           mailing list. - ADS

2009-01-16 Added helper function LinearSegmentedColormap.from_list to
           facilitate building simple custom colomaps.  See
           examples/pylab_examples/custom_cmap_fromlist.py - JDH

2009-01-16 Applied Michiel's patch for macosx backend to fix rounding
           bug. Closed sf bug 2508440 - JSW

2009-01-10 Applied Michiel's hatch patch for macosx backend and
           draw_idle patch for qt.  Closes sf patched 2497785 and
           2468809 - JDH
