@@ -19,6 +19,8 @@ list may help describe what changes may be necessary in your code.
 
 Changes for 0.98.x
 ==================
+* Remove support for pyExcelerator in exceltools -- use xlwt
+  instead 
 
 * Changed the defaults of acorr and xcorr to use usevlines=True,
   maxlags=10 and normed=True since these are the best defaults
